Add package and little fix