@@ -1,1 +1,13 @@
 # ExcelToPDF
+
+### Build Project
+
+set PATH_TO_FX="C:\Program Files\Java\javafx-sdk-17.0.0.1\lib"
+javac --module-path %PATH_TO_FX% --add-modules javafx.controls HelloFX.java
+
+
+### How to create exe from source
+
+```
+https://medium.com/@vinayprabhu19/creating-executable-javafx-application-part-2-c98cfa65801e
+```
